# shellroom

./: .gitignore  README.md  pylock.toml  pyproject.toml  requirements.txt
server/: app.py  config.py  registry.py
server/db/: models.py  session.py  storage.py
server/model/: __init__.py  room.py
shellroom/: __init__.py
shellroom/cli/: __init__.py  main.py
shellroom/sdk/: __init__.py  client.py
shellroom/server/: app.py  config.py  registry.py  utils.py
shellroom/server/db/: __init__.py  models.py  storage.py
shellroom/server/model/: __init__.py  room.py
shellroom/tui/: __init__.py  app.py
